visual fix on mobile view

--- a/pyx2cscope/gui/web/static/css/style.css
+++ b/pyx2cscope/gui/web/static/css/style.css
@@ -13,6 +13,14 @@ html {
     font-size: 12px;
 }
 
-.chartView {
-    height: 50vh;
+.chart-container {
+    position: relative;
+    width: 100%;
+    min-height: 300px;
+}
+
+.chart-view {
+    background-color: white;
+    border-radius: 0.25rem;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
